# LinkedIn_content_manager

./: .gitignore  README.md  pyproject.toml
src/linkedin_content_creator/: adapters.py  flow.py  main.py  types.py
src/linkedin_content_creator/config/: general.py
src/linkedin_content_creator/crews/content_creator_crew/: crew.py
src/linkedin_content_creator/crews/content_creator_crew/config/: agents.yaml  tasks.yaml
src/linkedin_content_creator/crews/rank_crew/: crew.py
src/linkedin_content_creator/crews/rank_crew/config/: agents.yaml  tasks.yaml
src/linkedin_content_creator/crews/summarizer_crew/: crew.py
src/linkedin_content_creator/crews/summarizer_crew/config/: agents.yaml  tasks.yaml
src/linkedin_content_creator/crews/trends_analist_crew/: crew.py
src/linkedin_content_creator/crews/trends_analist_crew/config/: agents.yaml  tasks.yaml
src/linkedin_content_creator/crews/trends_researcher_crew/: crew.py
src/linkedin_content_creator/crews/trends_researcher_crew/config/: agents.yaml  tasks.yaml
src/linkedin_content_creator/news_provider/: google_provider.py  main.py  news_provider.py
src/linkedin_content_creator/news_provider/API/google_news/: adapter.py  types.py
src/linkedin_content_creator/report_provider/: report_provider.py
src/linkedin_content_creator/tools/: reddit_trends_searcher.py  reddit_trends_searcher_base_tool.py
