[project]
name = "linkedin_content_creator"
version = "0.1.0"
description = "linkedin_content_creator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
linkedin_content_creator = "linkedin_content_creator.main:run"
run_crew = "linkedin_content_creator.main:run"
train = "linkedin_content_creator.main:train"
replay = "linkedin_content_creator.main:replay"
test = "linkedin_content_creator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
